2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: use zoom level.
	
	* godmode/gis_maps/configure_gis_map.php: include the things about
	default zoom level in function "validateMapData", "getMapData" and add
	the function "getNumZoomLevelsOfConnectionDefault".

2010-02-25  Sancho Lerena  <slerena@artica.es>

	* godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_actions.php: Show/Edit group for templates and actions.

	* include/functions_ui.php: Alert information now show the default
	actions properly,and the action conditions (max/min).

	* include/functions_alerts.php: Added support on get_alert_templates_types
	for new alert type "onchange".

	* pandoradb.sql
	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: Added new support for alert
	type "onchange".

	* godmode/alerts/alert_list.php: Alert information now shows the default
	action (if exist) and have a link to edit the template directly from here.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: fix dinamic show icon when change
	the select and show other icon the icon with "without status".

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: I did'nt upload in previous commit the changelog.

	* include/functions_gis.php: refactor the name of function "addPoint"
	to "addAgentPoint". In function "get_agent_icon_map" add new parameter
	$status for pass the status.
	
	* include/javascript/openlayers.pandora.js: add function "js_addAgentPoint"
	is same more or less "js_addPoint" and too for "js_addAgentPointExtent" and
	"js_addPointExtent".

	* operation/gis_maps/render_view.php: add the id_parent in the call of
	"addAgentPoint".
	
	* operation/gis_maps/ajax.php: clean source code and add the id_parent to
	return json for each agent.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>
